--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,7 @@ a:hover {
   background-attachment: fixed;
   background-size: cover;
   background-position: center center;
+  opacity: 0.95;
 }
 
 @media (max-width: 1024px) {
